# SinHerejias

./: .dockerignore  .env  Crear_Excel.py  Crear_pptx.py  Dockerfile  Dokerfile  MongoDB.py  README.md  agent.py  bor.py  contras.py  front copy.py  front.py  hisotrias.txt  mi_archivo.txt  mi_archivo1.txt  pyproject.toml  users.yaml
archivos/: matriz_priorizacion.xlsx
authenticator/controller/: authentication_controller.py
authenticator/models/: authentication_model.py  cookie_model.py
backend/: Scrum_AI.py  UserHist_AI copy.py  UserHist_AI.py  matriz_priorizacion copy.py  matriz_priorizacion.py
chats/JuanHurtado/L_Proyectos/: 1.json  motivacion_sobre_ruedas.json  pizza.json
chats/JuanHurtado/U_History/: 2.json
plantillas/: PLANTILLA1.pptx
